double tap zoom prevention fix on ios test

--- a/index.css
+++ b/index.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Mogra&family=Playwrite+NZ+Basic+Guides&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Seymour+One&display=swap");
 
+html {
+  touch-action: manipulation;
+}
+
+button,
+.list-container,
+.delete-btn {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   background-color: #0f0f13;
   width: 100vw;
